--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -36,15 +36,82 @@
     padding: 0.3rem;
   } */
 
+/** Nav Stuff **/
 .nav-container {
   background: #11213e;
   width: 100%;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  color: var(--primary-text-color);
-  padding: 0rem 2rem 1rem 2rem;
+  color: var(--nav-text-color);
+  padding: 0.5rem 2rem 0.5rem 2rem;
 }
+
+nav {
+  padding: 1.1rem 0 0 0;
+}
+
+.title {
+  float: left;
+  font-weight: normal;
+  font-family: inherit;
+}
+
+nav a {
+  float: right;
+  margin: 0rem 1rem;
+  position: relative;
+  color: var(--nav-text-color);
+  text-decoration: none;
+}
+
+nav a:hover {
+  font-weight: bold;
+  color: var(--secondary-text-color);
+}
+
+@media screen and (max-height: 700px) {
+  form {
+    transform: scale(0.9) !important;
+  }
+}
+
+@media screen and (max-width: 730px) {
+  .title {
+    font-size: 1.5rem;
+    padding-top: 1.5%;
+  }
+
+  header nav a {
+    font-size: 0.8rem;
+    padding-top: 0.5%;
+    margin: 0rem 0.6rem;
+  }
+
+  .nav-container {
+    padding: 0.5rem 0rem 0.5rem 1rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .title {
+    font-size: 0.9rem;
+    padding-top: 2%;
+  }
+
+  header nav a {
+    font-size: 0.65rem;
+  }
+
+  nav {
+    padding: 0.6rem 0 0 0;
+  }
+
+  form {
+    transform: scale(0.8);
+  }
+}
+/***************/
 
 h1 a {
   font-weight: normal;
@@ -62,17 +129,6 @@ h3 {
   color: white;
 }
 
-@media screen and (max-width: 750px) {
-  .title {
-    font-size: 1rem;
-    padding-top: 50%;
-  }
-
-  nav a {
-    font-size: 0.8rem;
-  }
-}
-
 body {
   background: #ffffff;
   max-width: 100%;
@@ -83,28 +139,7 @@ body {
 main {
   padding: 2rem;
   animation: fade-in 0.75s;
-}
-
-.title {
-  float: left;
-  font-weight: normal;
-  font-family: inherit;
-  padding-top: 1.25%;
-}
-
-nav a {
-  float: right;
-  margin: 0.3rem;
-  position: relative;
-  top: 30%;
-  color: var(--nav-text-color);
-  text-decoration: none;
-  padding: 0rem 0.5rem 0rem;
-}
-
-nav a:hover {
-  font-weight: bold;
-  color: var(--secondary-text-color);
+  height: 110vh;
 }
 
 footer {
@@ -177,8 +212,8 @@ label {
 
 .label-input-container textarea {
   margin: 0rem 0rem 0rem 0.5rem;
-  width: 20rem;
-  height: 12rem;
+  width: 10rem;
+  height: 2rem;
   padding: 1rem;
 }
 
@@ -201,33 +236,10 @@ input[type="submit"] {
   text-align: center;
 }
 
-@media screen and (max-width: 750px) {
-  .title {
-    font-size: 1.5rem;
-    padding-top: 3%;
-  }
-
-  header nav a {
-    font-size: 0.8rem;
-    padding-top: 1.5%;
-  }
-}
-
-@media screen and (max-width: 630px) {
-  .title {
-    font-size: 1rem;
-    padding-top: 3%;
-  }
-
-  header nav a {
-    font-size: 0.6rem;
-    padding-top: 0.75%;
-  }
-}
-
 form {
-  max-width: 75ch;
-  margin: 3rem auto;
+  max-width: 80ch;
+  width: 100%;
+  margin: 1rem auto;
 }
 
 .active {
