--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -35,6 +35,7 @@ nav > * + * {
   padding: 0.3rem;
 } */
 
+/** Nav Stuff **/
 .nav-container {
   background: #11213e;
   width: 100%;
@@ -42,47 +43,82 @@ nav > * + * {
   display: flex;
   justify-content: space-between;
   color: var(--nav-text-color);
-  padding: 0rem 2rem 1rem 2rem;
+  padding: 0.5rem 2rem 0.5rem 2rem;
 }
 
-@media screen and (max-width: 750px) {
-  .title {
-    font-size: 1rem;
-    padding-top: 50%;
-  }
-
-  nav a {
-    font-size: 0.8rem;
-  }
-}
-
-body {
-  background: #11213e;
-  max-width: 100%;
-  overflow-x: hidden;
-  font-family: var(--font-family-main);
+nav {
+  padding: 1.1rem 0 0 0;
 }
 
 .title {
   float: left;
   font-weight: normal;
   font-family: inherit;
-  padding-top: 1.25%;
 }
 
 nav a {
   float: right;
-  margin: 0.3rem;
+  margin: 0rem 1rem;
   position: relative;
-  top: 30%;
   color: var(--nav-text-color);
   text-decoration: none;
-  padding: 0rem 0.5rem 0rem;
 }
 
 nav a:hover {
   font-weight: bold;
   color: var(--secondary-text-color);
+}
+
+@media screen and (max-width: 730px) {
+  .title {
+    font-size: 1.5rem;
+    padding-top: 1.5%;
+  }
+
+  header nav a {
+    font-size: 0.8rem;
+    padding-top: 0.5%;
+    margin: 0rem 0.6rem;
+  }
+
+  .nav-container {
+    padding: 0.5rem 0rem 0.5rem 1rem;
+  }
+
+  section p {
+    font-size: 0.9rem !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .title {
+    font-size: 0.9rem;
+    padding-top: 2%;
+  }
+
+  header nav a {
+    font-size: 0.65rem;
+  }
+
+  nav {
+    padding: 0.6rem 0 0 0;
+  }
+
+  main {
+    height: 100vh !important;
+  }
+
+  section p {
+    font-size: 0.8rem !important;
+  }
+}
+/***************/
+
+body {
+  background: #11213e;
+  max-width: 100%;
+  overflow-x: hidden;
+  font-family: var(--font-family-main);
 }
 
 main {
@@ -158,14 +194,16 @@ button {
   color: rgb(0, 0, 0);
   border: none;
   padding: 0.5rem 1rem 0.5rem 1rem;
-  border-radius: 0.5rem;
+  border-radius: 0.8rem;
   font-size: 1.2rem;
   font-weight: bold;
   cursor: pointer;
+  transition: 0.25s;
 }
 
 button:hover {
   background: var(--secondary-text-color);
+  border-radius: 10rem;
 }
 
 main a:hover {
@@ -177,30 +215,6 @@ main a:hover {
   height: 1.5rem;
   margin-right: 1rem;
   cursor: pointer;
-}
-
-@media screen and (max-width: 750px) {
-  .title {
-    font-size: 1.5rem;
-    padding-top: 3%;
-  }
-
-  header nav a {
-    font-size: 0.8rem;
-    padding-top: 1.5%;
-  }
-}
-
-@media screen and (max-width: 630px) {
-  .title {
-    font-size: 1rem;
-    padding-top: 3%;
-  }
-
-  header nav a {
-    font-size: 0.6rem;
-    padding-top: 0.75%;
-  }
 }
 
 .active {
