--- a/assets/styles/projects.css
+++ b/assets/styles/projects.css
@@ -70,7 +70,7 @@ nav a:hover {
   color: var(--secondary-text-color);
 }
 
-@media screen and (max-width: 730px) {
+@media screen and (max-width: 850px) {
   .title {
     font-size: 1.5rem;
     padding-top: 1.5%;
@@ -113,7 +113,7 @@ nav a:hover {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 650px) {
   .title {
     font-size: 0.9rem;
     padding-top: 2%;
@@ -246,7 +246,8 @@ figcaption {
 }
 
 figure img {
-  width: 40%;
+  width: 200px;
+  height: 200px;
 }
 
 figcaption h4 {
