--- a/assets/styles/projects.css
+++ b/assets/styles/projects.css
@@ -267,13 +267,9 @@ figcaption p {
 }
 
 p a {
-  text-decoration: none;
-}
-
-h4 a:visited {
-  font-weight: bold;
-  font-size: 1.1rem;
-  color: var(--secondary-text-color);
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  color: white;
 }
 
 p a:visited {
