--- a/assets/styles/projects.css
+++ b/assets/styles/projects.css
@@ -267,13 +267,22 @@ figcaption p {
 }
 
 p a {
+  text-decoration: none;
   margin-top: 1rem;
   font-size: 0.8rem;
   color: white;
 }
 
-p a:visited {
+h4 a {
+  text-decoration: none;
   margin-top: 1rem;
-  font-size: 0.8rem;
-  color: white;
+  font-size: 1.1rem;
+  color: var(--secondary-text-color);
+}
+
+p a:visited {
+  text-decoration: none;
+  margin-top: 1rem;
+  font-size: 1.1rem;
+  color: var(--primary-text-color);
 }
